minor change of z-index rules in admin stylesheets, causing overlay over MicroTiny in full screen view,minor fix in Simplex stylesheet
git-svn-id: http://svn.cmsmadesimple.org/svn/cmsmadesimple@9310 3d254a34-79dc-0310-9e5f-be208747d8a0

--- a/trunk/admin/themes/OneEleven/css/style-rtl.css
+++ b/trunk/admin/themes/OneEleven/css/style-rtl.css
@@ -912,7 +912,7 @@ p.login-info {
 }
 #oe_admin-content .shadow {
 	background: transparent url(themes/OneEleven/images/layout/sprite_repeatx.png) 831px -148px repeat-x;
-	z-index: 900;
+	z-index: 50;
 	position: absolute;
 	top: 100px;
 	right: 0;
@@ -1095,7 +1095,7 @@ header .shortcuts li.favorites a {
 #oe_sidebar .toggle-button {
 	text-indent: -9999em;
 	overflow: hidden;
-	z-index: 900;
+	z-index: 60;
 	display: block;
 	cursor: pointer;
 	width: 24px;
@@ -1341,7 +1341,7 @@ nav ul#oe_pagemenu li.current li a:active  {
 /*** footer ***/
 footer#oe_footer {
 	width: 100%;
-	z-index: 100;
+	z-index: 50;
 	height: 30px;
 	background: transparent url(themes/OneEleven/images/layout/sprite_repeatx.png) 829px -259px repeat-x;
 	padding-top: 5px;
